--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,8 +6,8 @@
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
 
-    <string name="pref_title_social_recommendations">Enable when device starts</string>
-    <string name="perf_Onboot">This app will automatically start when device is turned on</string>
+    <string name="pref_title_social_recommendations">Toggle Alerts</string>
+    <string name="perf_Onboot">Turning on will send you alerts every period that you have specified</string>
 
     <string name="pref_title_display_name">Your name</string>
     <string name="pref_default_display_name">John Smith</string>
@@ -31,8 +31,8 @@
     <string-array name="pref_sync_frequency_titles">
         <item>20 minutes</item>
         <item>25 minutes</item>
-        <item>30 hour</item>
-        <item>1 hours</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>20</item>
@@ -64,4 +64,5 @@
     <string name="dummy_content">20</string>
     <string name="great_job">Great Job </string>
     <string name="continueButton">Continue</string>
+    <string name="turn_on">Turn On</string>
 </resources>
